--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -422,7 +422,7 @@ figcaption {
   align-items: center;
   padding: 10px 50px;
   font-family: Inconsolata, monospace;
-  display: flex;
+  display: none;
   position: fixed;
   top: 0%;
   bottom: auto;
@@ -2705,7 +2705,7 @@ figcaption {
 .div-block-134 {
   grid-column-gap: 0px;
   grid-row-gap: 16px;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
@@ -2838,6 +2838,90 @@ figcaption {
   font-family: Inconsolata, monospace;
 }
 
+.rl_navbar1_logo-link {
+  padding-left: 0;
+}
+
+.rl_navbar1_container {
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  display: flex;
+}
+
+.rl_navbar1_menu {
+  align-items: center;
+  display: flex;
+  position: static;
+}
+
+.nav_bar {
+  width: 100%;
+  height: auto;
+  min-height: 4.5rem;
+  background-color: #e4e4e4;
+  border: 1px #000;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  align-items: center;
+  padding: 10px 5%;
+  display: flex;
+  position: fixed;
+  top: 0%;
+  bottom: auto;
+  left: 0%;
+  right: 0%;
+}
+
+.rl_navbar1_link {
+  color: #000;
+  background-color: rgba(0, 0, 0, 0);
+  padding: .5rem 1rem;
+  font-family: Inconsolata, monospace;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  text-decoration: none;
+}
+
+.rl_navbar1_link.w--current {
+  color: #000;
+}
+
+.rl_navbar1_menu-button {
+  padding: 0;
+}
+
+.rl_navbar1_link-copy {
+  color: #000;
+  background-color: rgba(0, 0, 0, 0);
+  padding: .5rem 1rem;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  text-decoration: none;
+  display: block;
+}
+
+.rl_navbar1_link-copy.w--current {
+  color: #000;
+}
+
+.text-block-16-copy {
+  color: #fff;
+  background-color: #08ad60;
+  border-radius: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-family: Inconsolata, monospace;
+  font-size: 10px;
+  font-weight: 400;
+}
+
 @media screen and (min-width: 1280px) {
   .paragraph-light.cc-position-name {
     font-family: Inconsolata, monospace;
@@ -2916,6 +3000,10 @@ figcaption {
 
   .text-block-20-copy {
     font-family: Inconsolata, monospace;
+  }
+
+  .rl_navbar1_link-copy.w--current {
+    display: block;
   }
 }
 
@@ -3023,6 +3111,7 @@ figcaption {
 
   .navigation {
     padding: 25px 30px;
+    display: block;
   }
 
   .menu-button {
@@ -3167,6 +3256,10 @@ figcaption {
     line-height: 54px;
   }
 
+  .image-3 {
+    display: none;
+  }
+
   .secondwork {
     flex-direction: column;
     align-items: stretch;
@@ -3271,7 +3364,7 @@ figcaption {
   }
 
   .link.text-decoration-none, .link.text-decoration-none.w--current {
-    display: none;
+    display: block;
   }
 
   .section-title {
@@ -3308,6 +3401,96 @@ figcaption {
 
   .div-block-134 {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .rl_menu-icon_line-bottom {
+    width: 24px;
+    height: 2px;
+    background-color: #000;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+
+  .rl_navbar1_menu {
+    -webkit-text-fill-color: inherit;
+    background-color: #fff;
+    background-clip: border-box;
+    border-bottom: 1px solid #000;
+    padding: 1rem 5% 2rem;
+    position: absolute;
+    overflow: auto;
+  }
+
+  .rl_navbar1_menu.is-page-height-tablet {
+    height: 100vh;
+    opacity: .97;
+    background-color: #e4e4e4;
+    padding-bottom: 15rem;
+  }
+
+  .nav_bar {
+    background-color: #e4e4e4;
+    border-bottom-style: solid;
+    border-bottom-color: rgba(0, 0, 0, .1);
+    display: flex;
+  }
+
+  .rl_menu-icon_line-top {
+    width: 24px;
+    height: 2px;
+    background-color: #000;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+
+  .rl_menu-icon {
+    width: 48px;
+    height: 48px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-right: -.5rem;
+    padding-bottom: 0;
+    padding-right: 0;
+    display: flex;
+  }
+
+  .rl_menu-icon_line-middle-inner {
+    width: 4px;
+    height: 0;
+    padding-bottom: 0;
+    padding-right: 0;
+  }
+
+  .rl_navbar1_link {
+    width: auto;
+    color: #fff;
+    padding: .75rem 0;
+    font-family: Inconsolata, monospace;
+    font-size: 1.125rem;
+  }
+
+  .rl_menu-icon_line-middle {
+    width: 24px;
+    height: 2px;
+    background-color: #000;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    padding-bottom: 0;
+    padding-right: 0;
+    display: flex;
+  }
+
+  .rl_navbar1_menu-button.w--open {
+    background-color: rgba(0, 0, 0, 0);
+  }
+
+  .rl_navbar1_link-copy {
+    width: auto;
+    padding: .75rem 0;
+    font-size: 1.125rem;
   }
 }
 
@@ -3821,6 +4004,15 @@ figcaption {
   .text-block-12-copy {
     font-size: 45px;
   }
+
+  .rl_navbar1_logo-link {
+    padding-left: 0;
+  }
+
+  .nav_bar {
+    height: auto;
+    min-height: 4rem;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -3973,6 +4165,7 @@ figcaption {
 
   .text-block-12-copy {
     white-space: normal;
+    font-size: 40px;
   }
 }
 
