--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -3155,9 +3155,10 @@ figcaption {
   }
 
   .mainsection {
-    margin-top: 7em;
+    margin-top: 10em;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 8em;
   }
 
   .uui-section_blogsection12 {
